--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2.0",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "morilog/jalali": "^2.2",
+        "jenssegers/date": "^3.2"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.9",
